--- a/html/_config.yml
+++ b/html/_config.yml
@@ -22,8 +22,8 @@ title: Vélo Club Cirois
 email: veloclubcirois@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Site web du Vélo Club Cirois pour partager les informations basiques sur les randonnées.
-baseurl: "html" # the subpath of your site, e.g. /blog
-url: "https://veloclubcirois.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /html/ # the subpath of your site, e.g. /blog
+url: https://veloclubcirois.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  veloclubcirois
 
