--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
-url: "https://sylhare.github.io"
+baseurl: "/"
+url: "https://veloclubcirois.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 title: Vélo Club Cirois                                    # site's title
